@@ -900,7 +900,7 @@ else {
 			$description[] = $proxies[$host['proxy_hostid']]['host'].NAME_DELIMITER;
 		}
 		if ($host['discoveryRule']) {
-			$description[] = new CLink($host['discoveryRule']['name'], 'host_prototypes.php?parent_discoveryid='.$host['discoveryRule']['itemid'], 'gold');
+			$description[] = new CLink($host['discoveryRule']['name'], 'host_prototypes.php?parent_discoveryid='.$host['discoveryRule']['itemid'], 'parent-discovery');
 			$description[] = NAME_DELIMITER;
 		}
 
